# talos_cli

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: notify-feat-merge.yml
config/: agents.yaml  test.yaml
email_client/: fetcher.py  task_extractor.py
orchestrator/: dag_executor.py
orchestrator/agents/: helloWorld.py  ollama_runner.py  summarizer.py
utils/: discord_notifier.py
